--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
       "expo-router",
       "expo-font",
       "expo-web-browser",
+      "./plugins/withChaquopy",
       [
         "expo-camera",
         {
